--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,26 @@
 body {
-    background-color: lightblue;
+    background-color: #04192a;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-family: monospace;
+    font-size: 30px;
+    height: 90vh;
+    position: relative;
   }
   
-  h1 {
-    color: navy;
-    margin-left: 20px;
-  }
+h1 {
+  margin: 0%
+}
+
+p {
+  margin: 0%
+}
+.homepage {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+}
