--- a/memory-matching-game/styles.css
+++ b/memory-matching-game/styles.css
@@ -1,31 +1,55 @@
 body {
-    background-color: #04192a;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    font-family: monospace;
-    font-size: 30px;
-    height: 90vh;
-    position: relative;
-  }
+  background-color: #04192a;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-family: monospace;
+  font-size: 30px;
+  height: 90vh;
+  position: relative;
+}
 
 table {
-    font-size: 30px;
-    width: 280px;
-    height: 280px;
+  font-size: 30px;
+  width: 280px;
+  height: 280px;
 }
 
 h1 {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 td {
-    width: 70px;
-    height: 70px;
-    background-color: rgba(250, 250, 250, 0.1);
-    text-align: center;
-    border-radius: 4px;
+  width: 70px;
+  height: 70px;
+  background-color: rgba(250, 250, 250, 0.1);
+  text-align: center;
+  border-radius: 4px;
+}
+
+h3 {
+  margin-bottom: 0px;
+}
+
+.explanation {
+  background-color: gray;
+  position: fixed;
+  z-index: 2;
+  border-radius: 0.75%;
+  top: 30%;
+  right: 25%;
+  bottom: 30%;
+  width: 50%;
+}
+
+.explanation-title {
+  margin-left: 5%;
+}
+
+.explanation-text {
+  margin-left: 5%;
+  margin-right: 5%;
 }
