--- a/memory-matching-game/styles.css
+++ b/memory-matching-game/styles.css
@@ -49,7 +49,6 @@ h3 {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  height: 75%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -110,6 +109,7 @@ h3 {
   touch-action: manipulation;
   vertical-align: baseline;
   width: 10em;
+  margin-bottom: 4%;
 }
 
 .explanation-button:hover,
@@ -120,5 +120,44 @@ h3 {
 }
 
 .explanation-button:hover {
+  transform: translateY(-1px);
+}
+
+.restart-button {
+  align-items: center;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.85);
+  cursor: pointer;
+  display: none;
+  font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  min-height: 3rem;
+  padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: 10em;
+  margin-bottom: 4%;
+}
+
+.restart-button:hover,
+.restart-button:focus {
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  color: rgba(0, 0, 0, 0.65);
+}
+
+.restart-button:hover {
   transform: translateY(-1px);
 }
