--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,13 @@ body {
 h1 {
   margin-bottom: 0px;
 }
+footer {
+  position: relative;
+  margin-top: auto;
+  margin-bottom: 0px;
+  font-size: small;
+  a {
+    text-decoration: none;
+    color: white;
+  }
+}
