--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -157,10 +157,14 @@ body {
   display: flex;
 }
 h1 {
-  margin-top: -600px;
+  margin-top: -100px;
   margin-bottom: 100px;
 }
-a {
-  margin-right: 1200px;
-  margin-bottom: 650px;
-  }
+.back-to-home {
+  color: white;
+  position: fixed;
+  top: 1%;
+  left: 2%;
+  text-decoration: none;
+  font-size: 2vw;
+}
