--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,18 @@ body {
   align-content: center;
   font-family: monospace;
   font-size: 30px;
-  height: 90vh;
+  height: 97vh;
   position: relative;
 }
 
+.homepage {
+  top: 50%;
+  transform: translate(0, -50%);
+  position: absolute;
+}
+
 h1 {
+  margin-top: 0%;
   margin-bottom: 0px;
 }
 footer {
