--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ body {
   position: absolute;
 }
 
+p {
+  margin-top: 0%;
+  margin-bottom: 4%;
+}
+
 h1 {
   margin-top: 0%;
   margin-bottom: 0px;
@@ -27,8 +32,9 @@ footer {
   margin-top: auto;
   margin-bottom: 0px;
   font-size: small;
-  a {
-    text-decoration: none;
-    color: white;
-  }
+}
+a {
+  color: #5fb0ec;
+  margin-bottom: 5%;
+  text-decoration: none;
 }
