--- a/Jump-n-run/styles.css
+++ b/Jump-n-run/styles.css
@@ -1,18 +1,47 @@
 body {
     background-color: #04192a;
     color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
     font-family: monospace;
-    font-size: 30px;
-    height: 90vh;
-    position: relative;
+    padding: 0;
+    margin: 0;
+}
+
+#game{
+  width: 500px;
+  height: 200px;
+  border: 1px solid black;
+}
+#character{
+  width: 20px;
+  height: 50px;
+  background-color: red;
+  position: relative;
+  top: 150px;
+  .animate {
+    animation-name: jump;
+    animation-duration: 500ms;
   }
   
-  h1 {
-    margin-bottom: 0px;
-  }
-  
+}
+@keyframes jump {
+  0%{top: 150px;}
+  30%{top: 100px;}
+  70%{top: 100px;}
+  100%{top: 150px;}
+}
+#block{
+  width: 20px;
+  height: 20px;
+  background-color: blue;
+  position: relative;
+  top: 130px;
+  left: 480px;
+  animation-name: block;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes block{
+  0%{left:480px;}
+  100%{left:-40px;}
+}
